--- a/template/src/styles/iview-reset.less
+++ b/template/src/styles/iview-reset.less
@@ -1,9 +1,9 @@
 /*!
 * Reset css for iview 2.*
 *
-* Website:          https://www.lovchun.com
-* Github:           https://github.com/PassionZale
-* Author:           Lei Zhang
+* Website:          https://www.itzdw.com
+* Github:           https://github.com/gvtfront
+* Author:           David Zhou
 */
 @distance-small: 10px;
 @distance-default: 20px;
